--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
     <packaging>pom</packaging>
     <name>learn-spring-cloud-alibaba</name>
     <description>learn-spring-cloud-alibaba</description>
+    <modules>
+        <module>consumer-service</module>
+    </modules>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>2021.0.4.0</spring-cloud.version>
