[Feat]: 服务消费者 consumer 集群

--- a/consumer-service/src/main/resources/application.yaml
+++ b/consumer-service/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: consumer-service
   # 注册服务
   cloud:
     nacos:
@@ -7,3 +9,8 @@ spring:
   config:
     import:
       - nacos:nacos-config-example.properties?refresh=true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
