--- a/consumer-service/pom.xml
+++ b/consumer-service/pom.xml
@@ -27,6 +27,22 @@
             <version>3.2.2</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <version>3.2.2</version>
+            <type>pom</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-reload4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>xyz.hooy</groupId>
             <artifactId>provider-service-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
