--- a/provider-service/src/main/resources/application.yaml
+++ b/provider-service/src/main/resources/application.yaml
@@ -1,19 +1,6 @@
 spring:
   application:
     name: provider-service
-  # 注册服务
-  cloud:
-    nacos:
-      serverAddr: 127.0.0.1:8848
-  # 配置中心
-  config:
-    import:
-      - nacos:nacos-config-example.properties?refresh=true
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
 dubbo:
   application:
     name: ${spring.application.name}
@@ -21,7 +8,7 @@ dubbo:
   provider:
     token: false
   registry:
-    address: nacos://${spring.cloud.nacos.serverAddr}
+    address: zookeeper://localhost:2181
   protocol:
     name: dubbo
     port: -1
