--- a/consumer-service/src/main/resources/application.yaml
+++ b/consumer-service/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ dubbo:
   provider:
     token: false
   registry:
-    address: zookeeper://localhost:2181
+    address: zookeeper://localhost:2181?backup=localhost:2182,localhost:2183
   protocol:
     name: dubbo
     port: -1
