--- a/dubbo-admin-governance/dubbo-admin/bin/config/application.properties
+++ b/dubbo-admin-governance/dubbo-admin/bin/config/application.properties
@@ -16,9 +16,9 @@
 #
 
 # centers in dubbo2.7, if you want to add parameters, please add them to the url
-admin.registry.address=zookeeper://127.0.0.1:2181
-admin.config-center=zookeeper://127.0.0.1:2181
-admin.metadata-report.address=zookeeper://127.0.0.1:2181
+admin.registry.address=zookeeper://localhost:2181?backup=localhost:2182,localhost:2183
+admin.config-center=zookeeper://localhost:2181?backup=localhost:2182,localhost:2183
+admin.metadata-report.address=zookeeper://localhost:2181?backup=localhost:2182,localhost:2183
 
 # nacos config, add parameters to url like username=nacos&password=nacos
 #admin.registry.address=nacos://127.0.0.1:8848?group=DEFAULT_GROUP&namespace=public
