--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.10</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>xyz.hooy</groupId>
     <artifactId>learn-apache-zookeeper-dubbo</artifactId>
@@ -15,11 +14,8 @@
     <name>learn-apache-zookeeper-dubbo</name>
     <description>learn-apache-zookeeper-dubbo</description>
     <modules>
-        <module>shenyu-gateway</module>
-        <module>consumer-service</module>
-        <module>consumer-service-api</module>
-        <module>provider-service</module>
-        <module>provider-service-api</module>
+        <module>comment-service</module>
+        <module>comment-service-api</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
