--- a/detail-service-api/pom.xml
+++ b/detail-service-api/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>xyz.hooy</groupId>
-    <artifactId>comment-service-api</artifactId>
+    <artifactId>detail-service-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>comment-service-api</name>
-    <description>comment-service-api</description>
+    <name>detail-service-api</name>
+    <description>detail-service-api</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
