--- a/detail-service/pom.xml
+++ b/detail-service/pom.xml
@@ -8,20 +8,29 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>xyz.hooy</groupId>
-    <artifactId>comment-service</artifactId>
+    <artifactId>detail-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>comment-service</name>
-    <description>comment-service</description>
+    <name>detail-service</name>
+    <description>detail-service</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>xyz.hooy</groupId>
+            <artifactId>detail-service-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.hooy</groupId>
             <artifactId>comment-service-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
@@ -42,6 +51,11 @@
                     <artifactId>slf4j-reload4j</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>xyz.hooy</groupId>
+            <artifactId>comment-service-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
