--- a/detail-service/src/main/resources/application.yaml
+++ b/detail-service/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
+server:
+  port: 21110
 spring:
   application:
     name: comment-service
@@ -11,4 +13,4 @@ dubbo:
     address: zookeeper://localhost:2181?backup=localhost:2182,localhost:2183
   protocol:
     name: dubbo
-    port: 21220
+    port: 21210
