--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -8,22 +8,22 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>xyz.hooy</groupId>
-    <artifactId>detail-service</artifactId>
+    <artifactId>order-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>detail-service</name>
-    <description>detail-service</description>
+    <name>order-service</name>
+    <description>order-service</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>xyz.hooy</groupId>
-            <artifactId>detail-service-api</artifactId>
+            <artifactId>order-service-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>xyz.hooy</groupId>
-            <artifactId>comment-service-api</artifactId>
+            <artifactId>detail-service-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
