[Fix]: 修复遗留代码导致的编译失败

--- a/detail-service/src/main/resources/application.yaml
+++ b/detail-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 21110
 spring:
   application:
-    name: comment-service
+    name: detail-service
 dubbo:
   application:
     name: ${spring.application.name}
