[Chore]: 更新 pom 域名

--- a/comment-service/pom.xml
+++ b/comment-service/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>xyz.hooy</groupId>
+        <groupId>xyz.hooy.lazd</groupId>
         <artifactId>learn-apache-zookeeper-dubbo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>xyz.hooy</groupId>
+    <groupId>xyz.hooy.lazd</groupId>
     <artifactId>comment-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>comment-service</name>
@@ -17,7 +17,7 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>xyz.hooy</groupId>
+            <groupId>xyz.hooy.lazd</groupId>
             <artifactId>comment-service-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
